style.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap');

/* GENERALS */

*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  min-height: 100vh;
  font-family: 'Inter', sans-serif;
  font-size: 32px;
  background: -10px 100% / contain no-repeat url(images/pattern-curve.svg);
  display: flex;
  justify-content: center;
  align-items: center;
  overflow: hidden;
}

.testimonial.active {
  opacity: 1;
  transition: all .5s ease-in;
}

.swipe-left {
  transform: translateX(-100%);
  opacity: 0;
  transition: all .3s ease-out;
}

.swipe-right {
  transform: translateX(100%);
  opacity: 0;
  transition: all .3s ease-out;
}

/* TESTIMONIALS */

.testimonials {
  position: relative;
  max-width: 400px;
  text-align: center;
  display: grid;
}

.testimonial {
  grid-column: 1;
  grid-row: 1;
  opacity: 0;
}

.testimonial__person {
  position: relative;
  background: center / contain no-repeat url(images/pattern-bg.svg);
  padding: 20px;
  margin-bottom: 30px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.testimonial__picture {
  max-width: 240px;
  border-radius: 5px;
  box-shadow: -5px 43px 54px -20px hsl(240, 9%, 64%);
}


.testimonial__opinion {
  background: top center / 15% 20% no-repeat url(images/pattern-quotes.svg);
  color: hsl(240, 38%, 20%);
  padding: 20px;
  font-size: 1.3rem;
  font-weight: 300;
  line-height: 1.5;
}

.testimonial__author {
  font-size: 0.9rem;
  font-weight: 700;
}

.testimonial__position {
  font-weight: 500;
  font-size: 0.9rem;
  color: hsl(240, 18%, 77%);
}

.testimonial__buttons {
  position: absolute;
  background: white;
  height: 40px;
  width: 80px;
  top: 240px;
  left: 50%;
  transform: translateX(-50%);
  border-radius: 50px;
  display: flex;
  z-index: 1;
}

.testimonial__buttons>button {
  background: white;
  border: none;
  cursor: pointer;
  border-radius: 50px;
  flex: 1;
}

.testimonial__buttons img {
  width: 10px;
  vertical-align: middle;
}

/* DESKTOP */

@media (min-width: 800px) {

  body {
    background-position: -120px 125%;
  }

  .testimonials {
    max-width: 900px;
    text-align: start;
  }

  .testimonial {
    position: relative;
    margin: 0 auto;
    width: 90%;
    height: 450px;
    display: flex;
    flex-direction: column;
    justify-content: center;
  }

  .testimonial__person {
    position: absolute;
    padding: 48px;
    margin: 0;
    top: 0;
    right: -60px;
    bottom: 0;
    z-index: -1;
  }

  .testimonial__picture {
    max-width: 100%;
    max-height: 372px;
  }

  .testimonial__opinion {
    max-width: 65%;
    font-size: 1.55rem;
    line-height: 1.3;
  }

  .testimonial__signature {
    padding: 10px 20px;
    display: flex;
  }

  .testimonial__author {
    margin-right: 10px;
  }

  .testimonial__buttons {
    top: auto;
    left: auto;
    right: 240px;
    bottom: 12px;
  }
}

